# waveletcv

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  README.rst
.github/workflows/: build-multi-platform.yml  build.yml
cmake/: FindSphinx.cmake  python_venv.cmake  uninstall.cmake
docs/: CMakeLists.txt  docs.css  doxygen.conf  dwt2d.bib  formulas.tex  requirements.txt  theory.fdb_latexmk  theory.fls  theory.tex
docs/source/: README.rst  api.rst  conf.py  dwt2d.rst  index.rst  installation.rst  quickstart.rst  shrink.rst  wavelet.rst
docs/source/_static/css/: custom.css
docs/source/api/: array.rst  dwt.rst  shrink.rst  wavelet.rst
docs/source/snippets/: basic_usage.rst  build_and_install.rst  coeffstable.rst  license.rst  overview.rst
docs/source/snippets/usage/: dwt.rst  shrink.rst  wavelets.rst
docs/theory/: theory.aux
examples/: CMakeLists.txt  common.cpp  common.hpp  denoise.cpp  dwt2d.cpp  noise.cpp
include/cvwt/: array.hpp  biorthogonal.hpp  coiflets.hpp  compare.hpp  daubechies.hpp  dispatch.hpp  dwt2d.hpp  exception.hpp  filterbank.hpp  shrinkage.hpp  statistics.hpp  symlets.hpp  utils.hpp  wavelet.hpp
include/cvwt/array/: array.hpp  compare.hpp  statistics.hpp
include/cvwt/filters/: biorthogonal.hpp  coiflets.hpp  daubechies.hpp  symlets.hpp
include/cvwt/shrink/: bayes.hpp  shrink.hpp  sure.hpp  universal.hpp
include/wavelet/: biorthogonal.hpp  coiflets.hpp  daubechies.hpp  dwt2d.hpp  filterbank.hpp  shrinkage.hpp  symlets.hpp  utils.hpp  wavelet.h  wavelet.hpp
include/wtcv/: array.hpp  dispatch.hpp  dwt2d.hpp  exception.hpp  filterbank.hpp  shrink.hpp  utils.hpp  wavelet.hpp
include/wtcv/array/: array.hpp  compare.hpp  statistics.hpp
include/wtcv/filters/: biorthogonal.hpp  coiflets.hpp  daubechies.hpp  symlets.hpp
include/wtcv/shrink/: bayes.hpp  shrink.hpp  sure.hpp  universal.hpp
src/: CMakeLists.txt  array.cpp  compare.cpp  dwt2d.cpp  dwt2d_coeffsexpr.cpp  filterbank.cpp  main.cpp  shrinkage.cpp  statistics.cpp  utils.cpp  wavelet.cpp
src/array/: array.cpp  compare.cpp  statistics.cpp
src/shrink/: bayes.cpp  shrink.cpp  sure.cpp  universal.cpp
tests/: CMakeLists.txt  array_test.cpp  base_dwt2d.cpp  base_dwt2d.hpp  bior_test_cases.hpp  biorthogonal_test_cases  common.cpp  common.h  common.hpp  compare_test.cpp  db_test_cases.hpp  dwt2d.py  dwt2d_coeffsexpr_test.cpp  dwt2d_test.cpp  dwt2d_test.hpp  dwt_test_cases.hpp  filterbank_test.cpp  generate_shrinkage_test_cases.py  generate_test_cases.py  haar_test_cases.hpp  json.cpp  json.hpp  read_numpy.cpp  read_numpy.hpp  requirements.txt  shrink_test.cpp  shrinkage_test.cpp  statistics_test.cpp  test_cases.manifest  utils_test.cpp  wavelet_test.cpp  wavelet_test.hpp  wavelet_test_cases.hpp
tests/data/db1/symmetric/0/: coeffs.tiff  input.tiff
tests/data/db1/symmetric/1/: coeffs.tiff
